--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,15 @@ Description: Performs sensitivity analysis for publication bias in meta-analyses
     a standard meta-analysis of only the negative and "nonsignificant" studies.
 License: GPL-2
 Encoding: UTF-8
-Imports: metafor, stats, dplyr, robumeta, ggplot2, rlang
+Imports:
+  metafor,
+  stats,
+  dplyr,
+  robumeta,
+  ggplot2,
+  rlang
+Suggests:
+  testthat,
+  withr
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
