--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,37 @@
 Package: PublicationBias
-Type: Package
 Title: Sensitivity Analysis for Publication Bias in Meta-Analyses
 Version: 2.2.0.9000
 Author: Maya B. Mathur, Tyler J. VanderWeele, Mika Braginsky
+Authors@R: c(
+    person("Mika", "Braginsky", email = "mika.br@gmail.com", role = c("aut")),
+    person("Maya", "Mathur", email = "mmathur@stanford.edu", role = c("aut", "cre")),
+    person("Tyler J.", "VanderWeele", email = "tvanderw@hsph.harvard.edu", role = c("aut")))
 Maintainer: Maya B. Mathur <mmathur@stanford.edu>
-Description: Performs sensitivity analysis for publication bias in meta-analyses (per Mathur & VanderWeele, 2020 [<https://osf.io/s9dp6>]).
-    These analyses enable statements such as: "For publication bias to shift the observed point estimate to the null,
-    'significant' results would need to be at least 30-fold more likely to be published than negative or 'nonsignificant'
-    results." Comparable statements can be made regarding shifting to a chosen non-null value or shifting the confidence
-    interval. Provides a worst-case meta-analytic point estimate under maximal publication bias obtained simply by conducting
-    a standard meta-analysis of only the negative and "nonsignificant" studies.
+Description: Performs sensitivity analysis for publication bias in meta-analyses
+    (per Mathur & VanderWeele, 2020 [<https://osf.io/s9dp6>]). These analyses
+    enable statements such as: "For publication bias to shift the observed point
+    estimate to the null, 'significant' results would need to be at least
+    30-fold more likely to be published than negative or 'nonsignificant'
+    results." Comparable statements can be made regarding shifting to a chosen
+    non-null value or shifting the confidence interval. Provides a worst-case
+    meta-analytic point estimate under maximal publication bias obtained simply
+    by conducting a standard meta-analysis of only the negative and
+    "nonsignificant" studies.
 License: GPL-2
+URL: https://github.com/mayamathur/PublicationBias
+BugReports: https://github.com/mayamathur/PublicationBias/issues
 Encoding: UTF-8
+Depends:
+    R (>= 4.1.0)
 Imports:
-  dplyr,
-  ggplot2,
-  metabias,
-  metafor,
-  stats,
-  rlang,
-  robumeta
+    dplyr,
+    ggplot2,
+    glue,
+    metabias,
+    metafor,
+    stats,
+    rlang,
+    robumeta
 Suggests:
     testthat (>= 3.0.0),
     withr
