use refs from metabias

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Imports:
     metabias,
     metafor,
     stats,
+    Rdpack,
     rlang,
     robumeta
 Suggests:
@@ -38,4 +39,5 @@ Suggests:
 LazyData: true
 RoxygenNote: 7.2.1
 Roxygen: list(markdown = TRUE)
+RdMacros: Rdpack
 Config/testthat/edition: 3
