--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,12 @@ export(significance_funnel)
 export(svalue)
 import(ggplot2)
 import(stats)
+importFrom(Rdpack,reprompt)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,if_else)
+importFrom(dplyr,mutate)
+importFrom(dplyr,summarise)
+importFrom(dplyr,tibble)
+importFrom(glue,glue)
 importFrom(rlang,.data)
