--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(pval_plot)
 export(significance_funnel)
 export(svalue)
 import(ggplot2)
-import(stats)
 importFrom(Rdpack,reprompt)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -17,3 +16,8 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
 importFrom(glue,glue)
 importFrom(rlang,.data)
+importFrom(stats,optimize)
+importFrom(stats,pnorm)
+importFrom(stats,pt)
+importFrom(stats,qnorm)
+importFrom(stats,qt)
