--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,10 +34,11 @@ Imports:
     rlang,
     robumeta
 Suggests:
+    purrr,
     testthat (>= 3.0.0),
     withr
 LazyData: true
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
 RdMacros: Rdpack
 Config/testthat/edition: 3
