--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(significance_funnel)
 export(svalue)
 import(ggplot2)
 importFrom(Rdpack,reprompt)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,if_else)
