--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: PublicationBias
 Title: Sensitivity Analysis for Publication Bias in Meta-Analyses
-Version: 2.3.0
+Version: 2.2.1
 Author: Maya B. Mathur, Tyler J. VanderWeele, Mika Braginsky
 Authors@R: c(
-    person("Mika", "Braginsky", email = "mika.br@gmail.com", role = c("aut")),
-    person("Maya", "Mathur", email = "mmathur@stanford.edu", role = c("aut", "cre")),
+    person("Mika", "Braginsky", email = "mika.br@gmail.com", role = c("aut", "cre")),
+    person("Maya", "Mathur", email = "mmathur@stanford.edu", role = c("aut")),
     person("Tyler J.", "VanderWeele", email = "tvanderw@hsph.harvard.edu", role = c("aut")))
-Maintainer: Mika Braginsky <mika.br@gmail.com>
 Description: Performs sensitivity analysis for publication bias in meta-analyses
     (per Mathur & VanderWeele, 2020 [<doi:10.31219/osf.io/s9dp6>]). These analyses
     enable statements such as: "For publication bias to shift the observed point
@@ -19,7 +18,7 @@ Description: Performs sensitivity analysis for publication bias in meta-analyses
     "nonsignificant" studies.
 License: GPL-2
 URL: https://github.com/mayamathur/PublicationBias,
-    https://mayamathur.github.io/PublicationBias/
+     https://mayamathur.github.io/PublicationBias/
 BugReports: https://github.com/mayamathur/PublicationBias/issues
 Encoding: UTF-8
 Depends:
