--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://mayamathur.github.io/PublicationBias/
+url: https://mathurlabstanford.github.io/PublicationBias/
 template:
   bootstrap: 5
   bootswatch: flatly
